| Bug #33120 | Backup image flags are not set correctly. | ||
|---|---|---|---|
| Submitted: | 10 Dec 2007 18:31 | Modified: | 11 Aug 2008 20:15 |
| Reporter: | Rafal Somla | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Backup | Severity: | S3 (Non-critical) |
| Version: | 6.0 source | OS: | Any |
| Assigned to: | Jorgen Loland | Target Version: | 6.0 |
| Triage: | D2 (Serious) / R2 (Low) / E3 (Medium) | ||
[10 Dec 2007 18:31]
Rafal Somla
[18 Jun 2008 12:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/48084 2638 Jorgen Loland 2008-06-18 Bug#33120 - "Backup image flags are not set correctly." * Set BSTREAM_FLAG_BIG_ENDIAN bit if and backup image is made on a bit endian server. * Set BSTREAM_FLAG_BINLOG if the backup image stores a valid binlog position.
[18 Jun 2008 14:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/48094 2638 Jorgen Loland 2008-06-18 Bug#33120 - "Backup image flags are not set correctly." * Set BSTREAM_FLAG_BIG_ENDIAN flag if the backup image is made on a big endian server. * Set BSTREAM_FLAG_BINLOG flag if the backup image stores a valid binlog position.
[18 Jun 2008 14:13]
Rafal Somla
Good to push.
[27 Jun 2008 12:20]
Chuck Bell
Patch approved after short lived debate. ;)
[27 Jun 2008 12:23]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/48635 2639 Jorgen Loland 2008-06-27 [merge] bug#33120 - merging before push
[8 Aug 2008 15:37]
Paul DuBois
Fixed is pushed in 6.0.7.
[11 Aug 2008 20:15]
Paul DuBois
Noted in 6.0.7 changelog. BACKUP DATABASE did not properly set the flags in the first two bytes of the backup image.
[14 Sep 2008 3:04]
Bugs System
Pushed into 6.0.7-alpha (revid:jorgen.loland@sun.com-20080627122502-6zr38vau6qkiojsc) (version source revid:sven@mysql.com-20080818175803-c1nutd5773r6b4gd) (pib:3)
