Bug#33120 - "Backup image flags are not set correctly."

* Set BSTREAM_FLAG_BIG_ENDIAN flag if the backup image is made 
  on a big endian server.
* Set BSTREAM_FLAG_BINLOG flag if the backup image stores a valid
  binlog position.